--- a/ask_GPT.ipynb
+++ b/ask_GPT.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
    ],
    "source": [
     "\n",
-    "client  = OpenAI(api_key = \"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\")\n",
+    "client  = OpenAI(api_key = \"\")\n",
     "\n",
     "estimator = GPT_model.BedroomBathroomEstimator(client=client, model=\"gpt-4.1\")\n",
     "df_samples.data=df_samples.data.fillna('NaN')\n",
